# openapi_server/models/list_restaurants.py
@@ -7,23 +7,19 @@ import re  # noqa: F401
 from typing import Any, Dict, List, Optional  # noqa: F401
 
 from pydantic import AnyUrl, BaseModel, EmailStr, Field, validator  # noqa: F401
-from openapi_server.models.review import Review
+from openapi_server.models.restaurant import Restaurant
 
 
-class FavoriteFood(BaseModel):
+class ListRestaurants(BaseModel):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
 
-    FavoriteFood - a model defined in OpenAPI
+    ListRestaurants - a model defined in OpenAPI
 
-        id: The id of this FavoriteFood.
-        name: The name of this FavoriteFood.
-        reviews: The reviews of this FavoriteFood.
+        restaurants: The restaurants of this ListRestaurants.
     """
 
-    id: int = Field(alias="id")
-    name: str = Field(alias="name")
-    reviews: List[Review] = Field(alias="reviews")
+    restaurants: List[Restaurant] = Field(alias="restaurants")
 
-FavoriteFood.update_forward_refs()
+ListRestaurants.update_forward_refs()
