# openapi_server/models/list_reviews.py
@@ -10,20 +10,16 @@ from pydantic import AnyUrl, BaseModel, EmailStr, Field, validator  # noqa: F401
 from openapi_server.models.review import Review
 
 
-class FavoriteFood(BaseModel):
+class ListReviews(BaseModel):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
 
-    FavoriteFood - a model defined in OpenAPI
+    ListReviews - a model defined in OpenAPI
 
-        id: The id of this FavoriteFood.
-        name: The name of this FavoriteFood.
-        reviews: The reviews of this FavoriteFood.
+        reviews: The reviews of this ListReviews.
     """
 
-    id: int = Field(alias="id")
-    name: str = Field(alias="name")
     reviews: List[Review] = Field(alias="reviews")
 
-FavoriteFood.update_forward_refs()
+ListReviews.update_forward_refs()
